# agent_community_protocal

./: .gitignore  A2A_C2_Autonomous_Council_Plan.md  A2A_Codex_Protocol.md  A2A_Current_Debug_Status.md  A2A_Project_Structure.md  CONTRIBUTING.md  LICENSE  Makefile  NATS_Implementation_Guide.md  NATS_Research.md  README.md  c2_council_runner.py  claude_agent.py  claude_cli_agent.py  codex_agent.py  envelope.py  grok_cli_agent.py  protocol.py  pyproject.toml  run_c2_council.sh  test_a2a_consult.py  test_a2a_cross_session.py  test_c2_council_runner.py  test_cli_adapters.py  test_discover_agents.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements-docker.txt
docs/: PROTOCOL.md  a2a-envelope-v0.1.schema.json  codex-adapter.md  migration-to-envelope-v0.1.md  project-structure.md
docs/archive/: A2A_Codebase_Brief_For_Agents.md
docs/guides/: getting-started.md  install-a2a-consult-skill.md  project-structure.md
docs/research/: Grok_NATS_Integration.md  MCP_NATS_Long_Term_Recommendation.md  MCP_Server_Implementation.md
logs/council/: README.md  council_history_code_review.json  council_history_code_review_after_fixes.json  council_history_protocol_smoke.json  council_history_test.json  council_history_test2.json  council_transcript_code_review.md  council_transcript_code_review_after_fixes.md  council_transcript_protocol_smoke.md  council_transcript_test.md  council_transcript_test2.md
memory/: a2a_local_status.md
scripts/: discover_agents.py  install-a2a-consult.sh  install-a2a-cross-session.sh  install-a2a-talk-to.sh  run_c2_council.sh
skills/a2a-consult/: SKILL.md
skills/a2a-consult/scripts/: a2a_consult.py
skills/a2a-cross-session/: SKILL.md
skills/a2a-talk-to/: SKILL.md
(+7 files in other folders)
