[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-community-protocol"
version = "0.1.0"
description = "Reference implementation of the Agent Community Protocol — deterministic multi-agent councils for AI coding agents over NATS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  { name = "Agent Community Protocol Contributors" },
]
keywords = [
  "multi-agent",
  "agent-protocol",
  "nats",
  "synadia",
  "ai-agents",
  "claude",
  "codex",
  "grok",
  "a2a",
  "council",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
]

dependencies = [
  # Core protocol has zero dependencies.
  # Runtime adapters require:
  # "nats>=2.0",
  # "synadia-ai",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "mypy",
]

[project.urls]
Homepage = "https://github.com/terngphrp/agent_community_protocal"
Repository = "https://github.com/terngphrp/agent_community_protocal"
Issues = "https://github.com/terngphrp/agent_community_protocal/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["."]